--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,5 @@
 body {
   background: image-url('whitey.png');
-  padding-bottom: 100px;
 }
 
 #nav-sign-in {
